examples/deployment-elasticsearch-client-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-sample-nginx
  namespace: elasticsearch
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch-sample
        role: client
    spec:
      containers:
        - image: launcher.gcr.io/google/nginx1
          name: nginx
          volumeMounts:
            - name: site-conf
              mountPath: /etc/nginx/conf.d
            - name: site-top-html
              mountPath: /usr/share/nginx/html
        - image: cmmmli/elasticsearch:latest
          imagePullPolicy: Always
          name: elasticsearch-client
          ports:
          - containerPort: 9200
            name: http
            protocol: TCP
          - containerPort: 9300
            name: transport
            protocol: TCP
          volumeMounts:
          - name: storage
            mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: site-conf
          configMap:
            name: site-conf
        - name: site-top-html
          configMap:
            name: site-top-html
        - name: "storage"
          emptyDir:
            medium: ""
