examples/deployment-elasticsearch-data.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-data
  namespace: elasticsearch
  labels:
    app: elasticsearch
    role: data
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: elasticsearch-sample
        role: data
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role
                  operator: In
                  values:
                  - data
              topologyKey: kubernetes.io/hostname
      containers:
        - image: gcr.io/${GCP-PROJECT}/elasticsearch:${TAG}
          name: elasticsearch-data
          ports:
          - containerPort: 9300
            name: transport
            protocol: TCP
          volumeMounts:
          - name: storage
            mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: "storage"
          emptyDir:
            medium: ""
