examples/deployment-elasticsearch-full.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-full-sample
  namespace: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - elasticsearch
              topologyKey: kubernetes.io/hostname
      containers:
        - image: launcher.gcr.io/google/nginx1
          name: nginx
          volumeMounts:
            - name: site-conf
              mountPath: /etc/nginx/conf.d
            - name: site-top-html
              mountPath: /usr/share/nginx/html
        - image: elasticsearch:local
          name: elasticsearch-full
          ports:
          - containerPort: 9200
            name: http
            protocol: TCP
          - containerPort: 9300
            name: transport
            protocol: TCP
          volumeMounts:
          - name: storage
            mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: site-conf
          configMap:
            name: site-conf
        - name: site-top-html
          configMap:
            name: site-top-html
        - name: "storage"
          emptyDir:
            medium: ""
