examples/statefulSet-elasticsearch-full.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: elasticsearch-full-sample
  namespace: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  serviceName: elasticsearch-discovery
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - elasticsearch
              topologyKey: kubernetes.io/hostname
      containers:
        - image: launcher.gcr.io/google/nginx1
          name: nginx
          volumeMounts:
            - name: site-conf
              mountPath: /etc/nginx/conf.d
            - name: site-top-html
              mountPath: /usr/share/nginx/html
        - image: cmmmli/elasticsearch:latest
          name: elasticsearch-full
          ports:
          - containerPort: 9200
            name: http
            protocol: TCP
          - containerPort: 9300
            name: transport
            protocol: TCP
          volumeMounts:
          - name: storage
            mountPath: /usr/share/elasticsearch/data
          - name: elasticsearch-dictionary
            mountPath: /usr/share/elasticsearch/config/dictionary
      volumes:
        - name: site-conf
          configMap:
            name: site-conf
        - name: site-top-html
          configMap:
            name: site-top-html
        - name: elasticsearch-dictionary
          configMap:
            name: elasticsearch-dictionary
  volumeClaimTemplates:
  - metadata:
      name: storage
      annotations:
        volume.beta.kubernetes.io/storage-class: hostpath
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
