examples/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch-sample
  namespace: elasticsearch
  labels:
    app: elasticsearch-sample
    role: client
  annotations:
    service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  type: NodePort
  selector:
    app: elasticsearch-sample
    role: client
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-discovery
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: master
spec:
  type: NodePort
  selector:
    app: elasticsearch-sample
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elasticsearch
  labels:
    app: elasticsearch-sample
    role: client
spec:
  selector:
    app: elasticsearch-sample
    role: client
  ports:
  - name: http
    port: 9200
    protocol: TCP
